# kernel_email_tools

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  migrate_in_reply_to.py  plan-31000.md  plan-ask-agent.md  plan-knowledge-workbench.md  pyproject.toml  xsave.md
.Joycode/plans/: PLAN-30002-external-code-jump.md  PLAN-31004-ui-information-hierarchy.md  PLAN-31005-mockup.html  PLAN-31005.md  PLAN-34001-evidence-contribution-badges.md  PLAN-37001-kernel-code-atlas.md  (+5 more)
config/: settings.py  settings.yaml
docs/: annotation-user-guide.md
kernel_email_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: collect.py  fix_sdm_kernel_tools.py  index.py  index_symbols.py  ingest_manual.py  init_db_fresh.py  init_kernel_repo.sh  migrate_add_message_id.py  migrate_annotations.py  migrate_code_annotations.py  migrate_code_annotations_to_main.py  rebuild_annotations_db.py  rebuild_db.py  rebuild_tag_schema.py  serve.py  split_server.py  sync_code_annotations.py  test_translate.py
src/: code_targets.py
tests/: test_agent_service.py  test_annotation_knowledge_schema.py  test_annotation_map_selection.py  test_annotation_relations.py  test_annotation_targeting.py  test_auth.py  test_contributions.py  test_core_utils.py  test_elixir_source.py  test_kernel_resolver.py  test_knowledge_enhancements.py  test_search.py  test_search_router.py  test_semantic_retriever.py  test_server_routes.py  test_translations_router.py
userscripts/: elixir-annotate.user.js
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+320 files in other folders)
